--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
     <main>
       <canvas id="my-canvas" width="416" height="640"></canvas>
       <ul class="component-list">
-        <li class="component" id="case">
+        <li class="component">
           <h2 class="tab">ケース</h2>
           <div class="workspace">
             <label class="text-label">
@@ -25,58 +25,55 @@
               見切り直径(mm)
               <input type="text" id="opening-size">
             </label>
-            <div class="shape-list">
+            <!-- <div class="shape-list">
               <h3>ラグ形状</h3>
               <ul>
                 <li>とんがった形状</li>
                 <li>丸みのある形状</li>
               </ul>
-            </div>
-            <div class="shape-list" id="crown-list">
+            </div> -->
+            <!-- <div class="shape-list" id="crown-list">
               <h3>りゅうず形状</h3>
               <ul>
                 <li id="crown-square"><img src="./images/crown-square.svg" alt="四角い形状のりゅうず" width="30"></li>
                 <li id="crown-round"><img src="./images/crown-round.svg" alt="丸い形状のりゅうず" width="30"></li>
               </ul>
-            </div>
-            <fieldset>
-              <legend>ケース色</legend>
-              <div class="radio-label-container">
-                <div>
-                <label class="radio-label">
-                  ゴールド
-                  <input type="radio" name="case-color" id="case-color-gold">
-                </label>
-                </div>
-                <label class="radio-label">
-                  シルバー
-                  <input type="radio" name="case-color" id="case-color-silver">
-                </label>
-                <label class="radio-label">
-                  ピンクゴールド
-                  <input type="radio" name="case-color" id="case-color-pinkgold">
-                </label>
-              </div>
-            </fieldset>
-          </div>
-        </li>
-        <li class="component" id="strap">
-          <h2 class="tab">ベルト</h2>
-          <div class="workspace">
-            <label>
-              ベルト幅(mm)
-              <input type="text" id="strap-width">
-            </label>
+            </div> -->
             <div class="shape-list">
-              <h3>バックル形状</h3>
+              <h3>ケース色</h3>
               <ul>
-                <li>スクエア</li>
-                <li>ラウンド</li>
+                <li>
+                  <label class="radio-label">
+                    <input type="radio" name="case-color" value="gold">
+                  </label>
+                  <div class="case-metal-color gold"></div>
+                </li>
+                <li>
+                  <label class="radio-label">
+                    <input type="radio" name="case-color" value="silver">
+                  </label>
+                  <div class="case-metal-color silver"></div>
+                </li>
+                <li>
+                  <label class="radio-label">
+                    <input type="radio" name="case-color" value="pink-gold">
+                  </label>
+                  <div class="case-metal-color pink-gold"></div>
+                </li>
               </ul>
             </div>
           </div>
         </li>
-        <li class="component" id="dial">
+        <li class="component">
+          <h2 class="tab">ベルト</h2>
+          <div class="workspace">
+            <label class="text-label">
+              ベルト幅(mm)
+              <input type="text" id="strap-width">
+            </label>
+          </div>
+        </li>
+        <li class="component">
           <h2 class="tab">文字盤</h2>
           <div class="workspace">文字盤のデザイン</div>
         </li>
