ラグ上だけは生成できたのでコミット。

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="text-label-container">
               <label for="lug-width">ラグ幅</label>
-              <input type="text" id="lug-width" size="4">
+              <input type="text" id="lug-width" size="4" value="16">
               <span>mm</span>
             </div>
             <div>
@@ -40,13 +40,13 @@
                     <label class="radio-label">
                       <input type="radio" name="lug-shape" value="round">
                     </label>
-                    <img src="./images/lug-round.svg" alt="丸い形状のラグ" width="80" height="32">
+                    <img src="./images/lug-round-w.svg" alt="丸い形状のラグ" width="80" height="32">
                   </li>
                   <li>
                     <label class="radio-label">
                       <input type="radio" name="lug-shape" value="square">
                     </label>
-                    <img src="./images/lug-square.svg" alt="四角い形状のラグ" width="80" height="32">
+                    <img src="./images/lug-square-w.svg" alt="四角い形状のラグ" width="80" height="32">
                   </li>
                 </ul>
               </div>
