これから機能追加など色々試すのでいったんコミットします

--- a/index.html
+++ b/index.html
@@ -29,7 +29,7 @@
             </div>
             <div class="text-label-container">
               <label for="lug-width">ラグ幅</label>
-              <input type="text" id="lug-width" size="4" value="16">
+              <input type="text" id="lug-width" size="4">
               <span>mm</span>
             </div>
             <div>
@@ -101,12 +101,23 @@
               <input type="text" id="strap-width" size="4">
               <span>mm</span>
             </div>
+            <div class="shape-list">
+              <h3>バックル形状</h3>
+              <ul>
+                <li>
+                  <label class="radio-label">
+                    <input type="radio" name="buckle-shape" value="square">
+                  </label>
+                  <img src="./images/buckle.svg" alt="四角い形状のラグ" width="80" height="32">
+                </li>
+              </ul>
+            </div>
           </div>
         </li>
-        <!-- <li class="component">
+        <li class="component">
           <h2 class="tab">文字盤</h2>
           <div class="workspace">文字盤のデザイン</div>
-        </li> -->
+        </li>
       </ul>
     </main>
     <div class="btn-container">
