テストを終えたのでコミット

--- a/index.html
+++ b/index.html
@@ -82,12 +82,20 @@
                   </label>
                   <div class="silver-color"></div>
                 </li>
-                <li>
+                <!-- <li>
                   <label class="radio-label">
                     <input type="radio" name="metal-color" value="pink-gold">
                   </label>
                   <div class="pink-gold-color"></div>
+                </li> -->
+                <!-- test -->
+                <li>
+                  <label class="radio-label">
+                    <input type="radio" name="metal-color" value="custom-color">
+                  </label>
+                  <div class="custom-color"></div>
                 </li>
+                <!-- test -->
               </ul>
             </div>
           </div>
@@ -116,14 +124,31 @@
         </li>
         <li class="component">
           <h2 class="tab">文字盤</h2>
-          <div class="workspace">文字盤のデザイン</div>
+          <div class="workspace" style="overflow-y: scroll">文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。文字盤のデザインです。</div>
         </li>
       </ul>
     </main>
     <div class="btn-container">
       <button id="dl-btn">ダウンロード(SVG)</button>
     </div>
+    <!-- test ----------------------------------------->
+    <button id="test-btn">dl</button>
+    <div id="test-color-container">
+      <input type="color" id="test-color-picker">
+    </div>
+    <input type="range" name="crown-size" id="test-range" min="1" max="50" step="1">
+    <ul class="gnavi">
+      <li class="current"><a href="#"><span>Home</span></a></li>
+      <li><a href="#"><span>About</span></a></li>
+      <li><a href="#"><span>Service</span></a></li>
+      <li><a href="#"><span>Contact</span></a></li>
+    </ul>
+    <div class="scroll_bar">::-webkit-scrollbar-trackと::-webkit-scrollbar-thumbではそれぞれborderプロパティやborder-radiusプロパティなどを使ったりして装飾できます。やりすぎると微妙かもしれませんが色々試してみるといいかもしれません。Firefoxはサポートされていませんが、Firefoxのデザインも変更する方法もこの記事で解説しています。</div>
+    <!-- test -------------------------------------------->
   <script src="./node_modules/fabric/dist/fabric.min.js"></script>
-  <script src="./js/index.js"></script>
+  <script type="module" src="./js/index.js"></script>
+  <!-- test -->
+  <script type="module" src="./js/test.js"></script>
+  <!-- test -->
 </body>
 </html>
