--- a/index.html
+++ b/index.html
@@ -23,8 +23,8 @@
           <div class="workspace">
             <div class="workspace-top-container">
               <div class="info">
-                <img src="./images/logo.png" alt="ケースの絵型">
-                <div class="comment">ケースの直径を入力してください</div>
+                <canvas id="info-canvas" width="260" height="204"></canvas>
+                <div id="case-comment" class="comment">ケースの直径</div>
               </div>
               <div class="text-labels-container">
                 <div class="text-label-container">
@@ -160,6 +160,7 @@
       <input type="color" id="test-color-picker">
     </div>
     <input type="range" name="crown-size" id="test-range" min="1" max="50" step="1">
+    <input type="range" name="canvas-size" id="canvas-range" min="1" max="5" step=".1">
     <ul class="gnavi">
       <li class="current"><a href="#"><span>Home</span></a></li>
       <li><a href="#"><span>About</span></a></li>
@@ -167,11 +168,12 @@
       <li><a href="#"><span>Contact</span></a></li>
     </ul>
     <div class="scroll_bar">::-webkit-scrollbar-trackと::-webkit-scrollbar-thumbではそれぞれborderプロパティやborder-radiusプロパティなどを使ったりして装飾できます。やりすぎると微妙かもしれませんが色々試してみるといいかもしれません。Firefoxはサポートされていませんが、Firefoxのデザインも変更する方法もこの記事で解説しています。</div>
+    <canvas id="test-canvas"></canvas>
     <!-- test -------------------------------------------->
   <script src="./node_modules/fabric/dist/fabric.min.js"></script>
   <script type="module" src="./js/index.js"></script>
   <!-- test -->
-  <script type="module" src="./js/test.js"></script>
+  <!-- <script type="module" src="./js/test.js"></script> -->
   <!-- test -->
 </body>
 </html>
