--- a/index.html
+++ b/index.html
@@ -24,7 +24,7 @@
             <div class="workspace-top-container">
               <div class="info">
                 <canvas id="info-canvas" width="260" height="204"></canvas>
-                <div id="case-comment" class="comment">ケースの直径</div>
+                <div id="case-comment" class="comment">ケースの直径をmmで入力</div>
               </div>
               <div class="text-labels-container">
                 <div class="text-label-container">
